--- a/.github/workflows/validate_assetlist.yml
+++ b/.github/workflows/validate_assetlist.yml
@@ -14,4 +14,4 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           json_schema: ./validator.schema.json
-          json_path_pattern: .*schema.json$
+          json_path_pattern: ./mainnet/*.schema.json
