--- a/.github/workflows/validate_schema.yml
+++ b/.github/workflows/validate_schema.yml
@@ -13,5 +13,5 @@ jobs:
         uses: snapcart/json-schema-validator@v1.0.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          json_schema: ./validators.schema.json
+          json_schema: ./schema.validators.json
           json_path_pattern: .*schema.json$
